Remove root 'SignalRClient'; Adds '.swiftpm' folder to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ node_modules/
 */TestServer/wwwroot/js/
 Pods/
 Package.resolved
+.swiftpm/
 .build/
 # This can be generated using: swift package generate-xcodeproj
 SwiftSignalRClient.xcodeproj
