--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,13 +18,13 @@ jobs:
     - name: Run tests
       run: swift test -v -Xswiftc -DWITHOUT_LIVE_SERVER
   
-#  ubuntu-build:
-#
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Build (Ubuntu)
-#      run: swift build -v
-#    - name: Run tests
-#      run: swift test -v -Xswiftc -DWITHOUT_LIVE_SERVER
+  ubuntu-build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build (Ubuntu)
+      run: swift build -v
+    - name: Run tests
+      run: swift test -v -Xswiftc -DWITHOUT_LIVE_SERVER
